--- a/bower.json
+++ b/bower.json
@@ -10,9 +10,7 @@
     "angular": "~1.0.7",
     "angular-socket-io": "~0.0.2",
     "angular-bootstrap": "~0.9.0",
-    "angular-moment": "~0.6.2"
-  },
-  "resolutions": {
-    "angular-bootstrap": "~0.10.0"
+    "angular-moment": "~0.6.2",
+    "angular-google-chart": "~0.0.8"
   }
 }
