--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "cookie": "~0.1.0",
     "connect": "~2.12.0",
     "passport.socketio": "~2.2.0",
-    "connect-mongo": "~0.4.0"
+    "connect-mongo": "~0.4.0",
     "grunt": "~0.4",
     "grunt-cli": "~0.1",
     "grunt-reload": "~0.2",
